fittings/crates/macros/tests/ui/fail/associated_type.stderr
error: service traits cannot declare associated types
 --> tests/ui/fail/associated_type.rs:3:5
  |
3 |     type Response;
  |     ^^^^

error: service methods must have signature `async fn name(&self, ctx: ServiceContext, params: P) -> Result<R, FittingsError>`
 --> tests/ui/fail/associated_type.rs:5:20
  |
5 |     async fn hello(&self, params: ()) -> Result<(), fittings::FittingsError>;
  |                    ^
